# rules_mdbook

./: .bazelrc  CHANGELOG.md  MODULE.bazel  README.md
docs/: defs.md  extensions.md
examples/treesrc/: BUILD.bazel  book.toml  gen_tree.bzl
mdbook/: BUILD.bazel  defs.bzl  extensions.bzl
mdbook/private/: known_versions.bzl
